After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767634 - Incorrect grammar in OS updates complete notification
Incorrect grammar in OS updates complete notification
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.20.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-06-14 04:57 UTC by Robert Ancell
Modified: 2016-12-29 13:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use correct grammar when notifying OS updates have been installed. (1.44 KB, patch)
2016-09-29 02:52 UTC, Robert Ancell
none Details | Review
Use correct grammar when notifying OS updates have been installed. (1.43 KB, patch)
2016-09-29 02:53 UTC, Robert Ancell
committed Details | Review

Description Robert Ancell 2016-06-14 04:57:33 UTC
After installing OS updates the following notification is shown:

"OS Updates is now installed"

That should be:

"OS Updates are now installed".

The issue is the notification text was designed for an app, i.e. "APP is now installed". OS Updates are internally treated as an app called "OS Updates".
Comment 1 Jeremy Bicha 2016-06-14 06:12:40 UTC
Similarly, the description for "OS Updates" on the Updates page reads
"Includes performance, stability and security improvements"
But I think it should read
"Include performance, stability and security improvements"
Comment 2 Robert Ancell 2016-09-29 02:52:10 UTC
Created attachment 336481 [details] [review]
Use correct grammar when notifying OS updates have been installed.
Comment 3 Robert Ancell 2016-09-29 02:53:49 UTC
Created attachment 336482 [details] [review]
Use correct grammar when notifying OS updates have been installed.

Tweaked the comment and the capitalisation of the string.
Comment 4 Richard Hughes 2016-09-29 06:57:00 UTC
Please change it to the else on a single line (e.g. "} else {") and then push to master, thanks!
Comment 5 Rafal Luzynski 2016-10-04 22:45:39 UTC
Also Please consider fixing the string according to what Jeremy suggested in comment 1:

"Includes performance,...

probably should be

"Includes performance,...

because the context is: "OS Updates Includes performance..."

https://git.gnome.org/browse/gnome-software/tree/src/gs-plugin-loader.c#n1226

I think the change is too trivial to provide a patch.
Comment 6 Robert Ancell 2016-10-04 23:21:19 UTC
You should really raise the other issue as a separate bug...