Use correct grammar when notifying OS updates have been installed.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=767634