src/gs-common.c
@@ -132,9 +132,15 @@ gs_app_notify_installed (GsApp *app)
 	g_autofree gchar *summary = NULL;
 	g_autoptr(GNotification) n = NULL;
 
-	/* TRANSLATORS: this is the summary of a notification that an application
-	 * has been successfully installed */
-	summary = g_strdup_printf (_("%s is now installed"), gs_app_get_name (app));
+	if (gs_app_get_kind (app) == AS_APP_KIND_OS_UPDATE) {
+		/* TRANSLATORS: this is the summary of a notification that OS updates
+		 * have been successfully installed */
+		summary = g_strdup (_("OS updates are now installed"));
+	} else {
+		/* TRANSLATORS: this is the summary of a notification that an application
+		 * has been successfully installed */
+		summary = g_strdup_printf (_("%s is now installed"), gs_app_get_name (app));
+	}
 	n = g_notification_new (summary);
 	if (gs_app_get_kind (app) == AS_APP_KIND_DESKTOP) {
 		/* TRANSLATORS: this is button that opens the newly installed application */
